objects/Sales_Team_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Team_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <label>Sales Team</label>
        <referenceTo>Sales_Team__c</referenceTo>
        <relationshipLabel>Sales Team Assignments</relationshipLabel>
        <relationshipName>Sales_Team_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Salesperson_Name__c</fullName>
        <formula>Sales_Person__r.FirstName &amp; &quot; &quot; &amp; Sales_Person__r.LastName</formula>
        <label>Salesperson Name</label>
        <type>Text</type>
    </fields>
    <label>Sales Team Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Manager__c</columns>
        <columns>Sales_Person__c</columns>
        <columns>Sales_Team__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sales Team Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Team Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Sales_Person_cannot_be_empty_or_changed</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Sales_Person__c) ||  ISCHANGED(Sales_Person__c)</errorConditionFormula>
        <errorDisplayField>Sales_Person__c</errorDisplayField>
        <errorMessage>Cannot be empty or changed</errorMessage>
    </validationRules>
</CustomObject>